apps/mario/manifests/05_deployment.yml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: mario
spec:
  selector:
    matchLabels:
      app: mario
  replicas: 2
  template:
    metadata:
      labels:
        app: mario
    spec:
      containers:
        - name: mario
          image: quay.io/kmoini/infinite_mario:latest
          ports:
            - containerPort: 8080
              protocol: TCP
          resources:
            requests:
              cpu: 100m
              memory: 128Mi
            limits:
              cpu: 200m
              memory: 256Mi
  strategy:
    type: RollingUpdate
    rollingUpdate:
      maxSurge: 25%
      maxUnavailable: 25%
