apps/mario/manifests/10_route.yml
---
apiVersion: route.openshift.io/v1
kind: Route
metadata:
  name: mario
  # namespace: mario
spec:
  to:
    kind: Service
    name: mario
    weight: 100
  port:
    targetPort: "8080-tcp"
  tls:
    termination: edge
  wildcardPolicy: None
